--- a/RickandMorty/Base.lproj/LaunchScreen.storyboard
+++ b/RickandMorty/Base.lproj/LaunchScreen.storyboard
@@ -37,6 +37,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchImage" width="221.5" height="281.5"/>
+        <image name="LaunchImage" width="147.66667175292969" height="187.66667175292969"/>
     </resources>
 </document>
